<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_form_layout"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="352dp"
        android:layout_height="607dp"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653">

        <TableRow
            android:layout_width="132dp"
            android:layout_height="305dp"
            android:layout_margin="15dp"
            android:layout_weight="3"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="10">

                <ImageView
                    android:id="@+id/avatarImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:contentDescription="@string/avatarDesc"
                    app:srcCompat="@drawable/bigdrake_small" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:onClick="swapAvatar"
                    android:text="@string/avatar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="6">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/nameHint"
                    android:inputType="textCapCharacters" />

                <EditText
                    android:id="@+id/editTextTextPersonFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/firstNameHint"
                    android:inputType="textCapSentences" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/gender" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="welcomeGender"
                        android:layout_weight="1"
                        android:minWidth="32dp"
                        android:minHeight="32dp"
                        android:text="@string/male"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="match_parent"
                        android:onClick="welcomeGender"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:minWidth="32dp"
                        android:minHeight="32dp"
                        android:text="@string/female"
                        android:checked="true"
                        android:textSize="12sp" />

                </RadioGroup>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/emailHint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextPlayTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/playTimeHint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/progText" />

                <CheckBox
                    android:id="@+id/checkBoxProgC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/progC" />

                <CheckBox
                    android:id="@+id/checkBoxProgJS"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/progJS" />

                <CheckBox
                    android:id="@+id/checkBoxProgPhpSql"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/progPHPSQL" />

                <CheckBox
                    android:id="@+id/checkBoxProgJava"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/progJava" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/resetButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/button_sizeW"
                android:layout_height="@dimen/button_sizeH"
                android:layout_gravity="start"
                android:onClick="resetClick"
                android:text="@string/reset" />

            <Button
                android:id="@+id/sendButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/button_sizeW"
                android:layout_height="@dimen/button_sizeH"
                android:layout_gravity="start"
                android:onClick="sendClick"
                android:text="@string/send" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textStyle="italic"
        android:textColor="#3C5DFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>